--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,19 @@ a {
     color:white;
 
 }
+
+.node circle {
+  fill: yellow;
+  stroke-width: .5px;
+}
+
+.node {
+  font: 10px sans-serif;
+  fill: white;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1px;
+}
